footer page alignment is fixed

--- a/css/footer.css
+++ b/css/footer.css
@@ -43,6 +43,10 @@ input {
     height: 50px;
 }
 
+.contact-info {
+    padding-left: 30px;
+}
+
 .form-control {
     border-radius: 8px;
     margin: 0px 2px 28px 2px;
@@ -94,6 +98,9 @@ input {
     padding-right: 3rem !important;
 }
 
+.contact-form-container form {
+    padding-right: 30px;
+}
 
 /* Curved logo at the bottom-right */
 .logo-corner {
@@ -108,7 +115,6 @@ input {
 .logo-corner img {
     max-width: 200px !important;
     position: relative;
-    left: 78%;
     object-fit: contain;
 }
 
@@ -121,8 +127,7 @@ input {
 @media (min-width:1480px) {
     .logo-corner {
         position: relative;
-        bottom: -48px;
-        left: 3.6%;
+        bottom: 0px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -131,7 +136,6 @@ input {
     .logo-corner img {
         max-width: 200px;
         position: relative;
-        left: 77%;
         object-fit: contain;
     }
 }
@@ -157,7 +161,7 @@ input {
 
     .logo-corner {
         position: relative;
-        bottom: -42px;
+        bottom: 0px;
         right: 0;
         display: flex;
         align-items: center;
@@ -167,7 +171,6 @@ input {
     .logo-corner img {
         position: relative;
         max-width: 200px;
-        /* right: 1%; */
         object-fit: contain;
     }
 }
@@ -194,7 +197,7 @@ input {
 
     .logo-corner {
         position: relative;
-        bottom: -48px;
+        bottom: -49px;
         right: 0;
         display: flex;
         align-items: center;
@@ -204,7 +207,6 @@ input {
     .logo-corner img {
         position: relative;
         max-width: 200px;
-        left: 68% ;
         object-fit: contain;
     }
 
@@ -238,7 +240,7 @@ input {
 
     .logo-corner {
         position: relative;
-        bottom: -49px;
+        bottom: -97px;
         right: 0;
         display: flex;
         align-items: center;
@@ -248,7 +250,6 @@ input {
     .logo-corner img {
         position: relative;
         max-width: 200px;
-        left: 62%;
         object-fit: contain;
     }
 
@@ -264,6 +265,17 @@ input {
     }
 }
 
+@media (max-width:767px) {
+    .logo-corner {
+        position: relative;
+        bottom: -1px;
+        left: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 @media (max-width:600px) {
 
     .form-control {
@@ -276,7 +288,7 @@ input {
 
     .contact-section h1 {
         font-size: 30px !important;
-        padding-top: 30px;
+        padding-top: 0px;
         margin-bottom: 20px !important;
     }
 
@@ -286,7 +298,7 @@ input {
 
     .logo-corner {
         position: relative;
-        bottom: -48px;
+        bottom: 0px;
         right: 0;
         display: flex;
         align-items: center;
@@ -296,7 +308,6 @@ input {
     .logo-corner img {
         position: relative;
         max-width: 200px;
-        right: -70.5%;
         object-fit: contain;
     }
 
@@ -326,7 +337,7 @@ input {
 
     .contact-section h1 {
         font-size: 26px !important;
-        padding-top: 30px !important;
+        padding-top: 0px !important;
         margin-bottom: 20px !important;
     }
 
@@ -336,8 +347,9 @@ input {
 
     .logo-corner {
         position: relative;
-        bottom: -48px;
+        bottom: 0px;
         right: 0;
+        left: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -347,7 +359,6 @@ input {
         position: relative;
         max-width: 156px !important;
         object-fit: contain;
-        left: 65%;
     }
 
     .footer span {
@@ -369,6 +380,10 @@ input {
         font-size: 14px;
         font-weight: 600;
     }
+
+    .contact-form-container form{
+        padding-right: 0px;
+    }
 }
 
 
@@ -384,7 +399,7 @@ input {
 
     .contact-section h1 {
         font-size: 22px !important;
-        padding-top: 6px !important;
+        padding-top: 0px !important;
         margin-bottom: 20px !important;
     }
 
@@ -402,8 +417,8 @@ input {
 
     .logo-corner {
         position: relative;
-        bottom: -48px;
         right: 0;
+        left: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -412,7 +427,6 @@ input {
     .logo-corner img {
         position: relative;
         max-width: 200px;
-        left: 44%;
         object-fit: contain;
     }
 
@@ -436,17 +450,21 @@ input {
     }
 
     .contact-section h1 {
-        font-size: 19px !important;
+        font-size: 27px !important;
+        text-align: center;
     }
 
     .contact-section h2 {
-        font-size: 12px !important;
+        font-size: 16px !important;
+        text-align: center;
+        font-weight: normal;
+        padding-bottom: 11px;
     }
 
     .logo-corner {
         position: relative;
-        bottom: -49px;
-        left: 5px;
+        bottom: 0px;
+        left: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -456,7 +474,7 @@ input {
         position: relative;
         max-width: 133px;
         object-fit: contain;
-        left: 55%;
+
     }
 
     .submit-btn {
